--- a/.github/workflows/R3S-OpenWrt.yml
+++ b/.github/workflows/R3S-OpenWrt.yml
@@ -145,7 +145,7 @@ jobs:
         allowUpdates: true
         prerelease: false
         tag: ${{ env.latest_release }}
-        commit: "24.10"
+        commit: "main"
         replacesArtifacts: true
         token: ${{ secrets.GH_TOKEN }}
         artifacts: ./artifact/*.zip
